test/distinctname/fail/param.j
class A { Void main() { return; } }
class B {
  Void a(Int b, String b) {return;}
}
